--- a/TODO
+++ b/TODO
@@ -1,9 +1,12 @@
+Code at: https://www.github.com/queerviolet/rock-paper-scissors
+
+
 [X] data schema
   - users
   - tokens
   - games
 [X] migrations: users, tokens, games
-[ ] models: User, Token, Game
-[ ] controllers
-[ ] views
+[X] models: User, Token, Game
+[X] controllers
+[X] views
 [ ] talk on: activerecord has_many / belongs_to relationships
